modificacion de quienes somos y unos pequeños cambios en judicial, natural y principal

--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,225 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-    
+    <header>
+        <div class="bg-gray-900">
+            <div class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
+                <div class="relative flex items-center justify-between">
+                    <a href="/AdministraPlus/Index.html" aria-label="Company" title="Company"
+                        class="inline-flex items-center">
+                        <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none"
+                            xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round"
+                            stroke-linejoin="round" stroke-width="2"
+                            class="w-10 h-10 text-white p-2 bg-blue-600 rounded-full" viewBox="0 0 24 24">
+                            <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+                        </svg>
+                        <span class="ml-2 text-xl font-bold tracking-wide text-gray-100 uppercase">ADPlus.com</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="dark:bg-gray-100 dark:text-gray-800">
+            <div class="container max-w-xl p-6 py-12 mx-auto space-y-24 lg:px-8 lg:max-w-7xl">
+                <div>
+                    <h2 class="text-3xl font-bold tracking-tight text-center sm:text-5xl dark:text-gray-900"
+                        _msttexthash="524784" _msthash="286">¿Que es ADPlus?</h2>
+                    <p class="max-w-3xl mx-auto mt-4 text-xl text-center dark:text-gray-600" _msttexthash="1429402"
+                        _msthash="287">ADPlus es una plataforma web integral que se encarga de la administración y
+                        gestión de las finanzas personales y empresariales, brindando herramientas y funcionalidades
+                        para el control, seguimiento y análisis de los movimientos de dinero</p>
+                </div>
+                <div class="grid lg:gap-8 lg:grid-cols-2 lg:items-center">
+                    <div>
+                        <h3 class="text-2xl font-bold tracking-tight sm:text-3xl dark:text-gray-900"
+                            _msttexthash="344071" _msthash="288">¿Que herramientas ofrece ADPlus?</h3>
+                        <p class="mt-3 text-lg dark:text-gray-600" _msttexthash="8994687" _msthash="289">Ofrecemos
+                            varias herramientas que permitirán tener un control adecuado y organizado de tus ingresos,
+                            gastos y ahorros, permitiéndote crecer financieramente.</p>
+                        <div class="mt-12 space-y-12">
+                            <div class="flex">
+                                <div class="flex-shrink-0">
+                                    <div
+                                        class="flex items-center justify-center w-12 h-12 rounded-md dark:bg-blue-600 dark:text-gray-50">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                            stroke="currentColor" class="w-7 h-7">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M5 13l4 4L19 7"></path>
+                                        </svg>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <h4 class="text-lg font-medium leading-6 dark:text-gray-900" _msttexthash="463463"
+                                        _msthash="290">Gestión de presupuestos</h4>
+                                    <p class="mt-2 dark:text-gray-600" _msttexthash="7653529" _msthash="291">Permite a
+                                        los usuarios (tanto personas como empresas) crear, monitorear y controlar sus
+                                        presupuestos, ya sea para gastos personales, familiares o para la operación de
+                                        un negocio.</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0">
+                                    <div
+                                        class="flex items-center justify-center w-12 h-12 rounded-md dark:bg-blue-600 dark:text-gray-50">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                            stroke="currentColor" class="w-7 h-7">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M5 13l4 4L19 7"></path>
+                                        </svg>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <h4 class="text-lg font-medium leading-6 dark:text-gray-900" _msttexthash="620243"
+                                        _msthash="292">Seguimiento de ingresos y egresos</h4>
+                                    <p class="mt-2 dark:text-gray-600" _msttexthash="7734038" _msthash="293">ADPlus
+                                        facilita el registro y seguimiento de los ingresos y egresos, permitiendo a los
+                                        usuarios tener una visión clara de sus flujos de efectivo..</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0">
+                                    <div
+                                        class="flex items-center justify-center w-12 h-12 rounded-md dark:bg-blue-600 dark:text-gray-50">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                            stroke="currentColor" class="w-7 h-7">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M5 13l4 4L19 7"></path>
+                                        </svg>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <h4 class="text-lg font-medium leading-6 dark:text-gray-900" _msttexthash="745537"
+                                        _msthash="294">Análisis financiero</h4>
+                                    <p class="mt-2 dark:text-gray-600" _msttexthash="8087352" _msthash="295">Ofrece
+                                        herramientas y funcionalidades para analizar la situación financiera,
+                                        identificar tendencias, patrones y oportunidades de mejora en la gestión del
+                                        dinero.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div aria-hidden="true" class="mt-10 lg:mt-0">
+                        <img src="https://th.bing.com/th/id/OIP.2WBy9VKqa1JpfApWFslVXgHaE8?rs=1&pid=ImgDetMain" alt=""
+                            class="mx-auto rounded-lg shadow-lg dark:bg-gray-500">
+                    </div>
+                </div>
+                <div>
+                    <div class="grid lg:gap-8 lg:grid-cols-2 lg:items-center">
+                        <div class="lg:col-start-2">
+                            <div class="mt-12 space-y-12">
+                                <div class="flex">
+                                    <div class="flex-shrink-0">
+                                        <div
+                                            class="flex items-center justify-center w-12 h-12 rounded-md dark:bg-blue-600 dark:text-gray-50">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                                stroke="currentColor" class="w-7 h-7">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                    d="M5 13l4 4L19 7"></path>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <div class="ml-4">
+                                        <h4 class="text-lg font-medium leading-6 dark:text-gray-900"
+                                            _msttexthash="792636" _msthash="298">Organización de cuentas y pagos</h4>
+                                        <p class="mt-2 dark:text-gray-600" _msttexthash="8013070" _msthash="299">Permite
+                                            a los usuarios vincular y administrar múltiples cuentas bancarias, tarjetas
+                                            de crédito y otras fuentes de ingresos y gastos, facilitando el pago de
+                                            facturas y la programación de transacciones.</p>
+                                    </div>
+                                </div>
+                                <div class="flex">
+                                    <div class="flex-shrink-0">
+                                        <div
+                                            class="flex items-center justify-center w-12 h-12 rounded-md dark:bg-blue-600 dark:text-gray-50">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                                stroke="currentColor" class="w-7 h-7">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                    d="M5 13l4 4L19 7"></path>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <div class="ml-4">
+                                        <h4 class="text-lg font-medium leading-6 dark:text-gray-900"
+                                            _msttexthash="721643" _msthash="300">Informes y reportes</h4>
+                                        <p class="mt-2 dark:text-gray-600" _msttexthash="7655778" _msthash="301">ADPlus
+                                            genera informes y reportes personalizados que ayudan a los usuarios a
+                                            comprender mejor su situación financiera, tomar decisiones informadas y
+                                            planificar mejor su futuro.</p>
+                                    </div>
+                                </div>
+                                <div class="flex">
+                                    <div class="flex-shrink-0">
+                                        <div
+                                            class="flex items-center justify-center w-12 h-12 rounded-md dark:bg-blue-600 dark:text-gray-50">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                                stroke="currentColor" class="w-7 h-7">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                    d="M5 13l4 4L19 7"></path>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <div class="ml-4">
+                                        <h4 class="text-lg font-medium leading-6 dark:text-gray-900"
+                                            _msttexthash="811837" _msthash="302">Asesoría y recomendaciones</h4>
+                                        <p class="mt-2 dark:text-gray-600" _msttexthash="7855042" _msthash="303">Puede
+                                            ofrecer asesoramiento financiero personalizado, basado en el análisis de los
+                                            datos y las necesidades específicas de cada usuario.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-10 lg:mt-0 lg:col-start-1 lg:row-start-1">
+                            <img src="https://th.bing.com/th/id/OIP.XBh0ba6AeUG868uIP47ONgHaE0?rs=1&pid=ImgDetMain"
+                                alt="" class="mx-auto rounded-lg shadow-lg dark:bg-gray-500">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="p-4 lg:p-8 dark:bg-gray-100 dark:text-gray-800">
+            <h2 class="text-3xl font-bold tracking-tight text-center sm:text-5xl dark:text-gray-900"
+                _msttexthash="524784" _msthash="286">Misión y visión de ADPlus </h2>
+            <br><br>
+            <div class="container mx-auto space-y-12">
+                <div class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row">
+                    <img src="https://th.bing.com/th?id=OIF.C%2bwFipbGQChrA5C%2b78Y3zQ&rs=1&pid=ImgDetMain" alt=""
+                        class="h-85 dark:bg-gray-500 aspect-video">
+                    <div class="flex flex-col justify-center flex-1 p-6 dark:bg-gray-50">
+                        <h3 class="text-3xl font-bold" _msttexthash="794404" _msthash="1134">Misión de ADPlus</h3>
+                        <p class="my-6 dark:text-gray-600" _msttexthash="6101368" _msthash="1135">Nuestra misión es
+                            transformar la forma en que las personas y las empresas administran sus finanzas, brindando
+                            una plataforma integral que simplifique y optimice el manejo del dinero. Buscamos impulsar
+                            una cultura de responsabilidad financiera y planificación a largo plazo, ofreciendo
+                            soluciones innovadoras que generen un impacto positivo en la vida y el bienestar económico
+                            de nuestros usuarios.
+                        </p>
+                        <p class="my-6 dark:text-gray-600" _msttexthash="6101368" _msthash="1135">A través de nuestra
+                            tecnología de vanguardia, nuestro enfoque en la experiencia del usuario
+                            y nuestro compromiso con la educación financiera, nos esforzamos por ser el socio confiable
+                            que guíe a nuestros clientes hacia una mayor estabilidad, crecimiento y éxito financiero.
+                        </p>
+                    </div>
+                </div>
+                <div class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row-reverse">
+                    <img src="https://asset.cyberowl.jp/owlas/g/w42mmo29/?r=1200" alt=""
+                        class="h-80 dark:bg-gray-500 aspect-video">
+                    <div class="flex flex-col justify-center flex-1 p-6 dark:bg-gray-50">
+                        <h3 class="text-3xl font-bold" _msttexthash="794404" _msthash="1138">Visión de ADPlus</h3>
+                        <p class="my-6 dark:text-gray-600" _msttexthash="6101368" _msthash="1139">Ser la solución de
+                            gestión financiera personal y empresarial líder en el mercado, empoderando a nuestros
+                            usuarios a lograr el control total sobre sus finanzas y alcanzar sus objetivos económicos a
+                            través de herramientas intuitivas, análisis predictivos y asesoramiento experto.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
