Se organzo el enlace de los botones de ngresar en las paginas natural y jurdca

--- a/Singup.html
+++ b/Singup.html
@@ -22,10 +22,10 @@
                     </div>
                 </div>
                 <div class="modal-actions">
-                    <a href="/AdministraPlus/natural.html" class="btn natural">
+                    <a href="natural.html" class="btn natural">
                         <button @click="isOpen = false">Natural</button>
                     </a>
-                    <a href="/AdministraPlus/juridica.html" class="btn juridica">
+                    <a href="juridica.html" class="btn juridica">
                         <button>Jurídica</button>
                     </a>
                 </div>
