cambios en el index y en quienes somos

--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -36,7 +36,7 @@
                 <div>
                     <h2 class="text-3xl font-bold tracking-tight text-center sm:text-5xl dark:text-gray-900"
                         _msttexthash="524784" _msthash="286">¿Que es ADPlus?</h2>
-                    <p class="max-w-3xl mx-auto mt-4 text-xl text-center dark:text-gray-600" _msttexthash="1429402"
+                    <p class="max-w-3xl mx-auto mt-4 text-xl text-left dark:text-gray-600" _msttexthash="1429402"
                         _msthash="287">ADPlus es una plataforma web integral que se encarga de la administración y
                         gestión de las finanzas personales y empresariales, brindando herramientas y funcionalidades
                         para el control, seguimiento y análisis de los movimientos de dinero</p>
