se le dió direccion al inicio y al incio de sesion de la pagina juridica y natural

--- a/natural.html
+++ b/natural.html
@@ -29,12 +29,12 @@
                 <div class="flex items-center gap-4">
                     <div class="sm:flex sm:gap-4">
                         <a class="block rounded-md bg-blue-400 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-blue-800"
-                            href="#">
+                            href="SingIn.html">
                             Iniciar sesión
                         </a>
 
                         <a class="hidden rounded-md bg-blue-400 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-blue-800 sm:block"
-                            href="/AdministraPlus/index.html">
+                            href="index.html">
                             Inicio
                         </a>
                     </div>
