se arreglaron los inputs

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <div class="bg-gray-900">
             <div class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
                 <div class="relative flex items-center justify-between">
-                    <a href="/AdministraPlus/Index.html" aria-label="Company" title="Company" class="inline-flex items-center">
+                    <a href="index.html" aria-label="Company" title="Company" class="inline-flex items-center">
                         <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-500 rounded-full" viewBox="0 0 24 24">
                             <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                         </svg>
@@ -35,7 +35,7 @@
                     <div class="max-w-xl lg:max-w-3xl">
                         <a class="block text-blue-600" href="#">
                             <span class="sr-only">Home</span>
-                            <a href="/AdministraPlus/index.html">
+                            <a href="index.html">
                                 <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-500 rounded-full" viewBox="0 0 24 24">
                                     <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                                 </svg>
@@ -88,7 +88,12 @@
                                     </label>
                                 </div>
                                 <div>
-                                    <button type="submit" value="Enviar">Enviar</button>
+                                    <button type="button" class="flex font-semibold  w-full px-3 py-3 text-sm tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-lg hover:bg-blue-400  focus:ring-blue-300 focus:ring-opacity-50">
+                                        <span>Enviar</span>
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 rtl:-scale-x-100" viewBox="0 0 20 20" fill="currentColor">
+                                            <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
+                                        </svg>
+                                    </button>
 
                                 </div>
 
