--- a/principal.html
+++ b/principal.html
@@ -8,9 +8,7 @@
     <link rel="shortcut icon" href="/AdministraPlus/imagenes/icono.ico">
 
     <link rel="stylesheet" href="style4.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -19,12 +17,8 @@
         <div class="bg-gray-900">
             <div class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
                 <div class="relative flex items-center justify-between">
-                    <a href="/AdministraPlus/Index.html" aria-label="Company" title="Company"
-                        class="inline-flex items-center">
-                        <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none"
-                            xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round"
-                            stroke-linejoin="round" stroke-width="2"
-                            class="w-10 h-10 text-white p-2 bg-blue-600 rounded-full" viewBox="0 0 24 24">
+                    <a href="/AdministraPlus/Index.html" aria-label="Company" title="Company" class="inline-flex items-center">
+                        <svg width="3rem" height="3rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-600 rounded-full" viewBox="0 0 24 24">
                             <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                         </svg>
                         <span class="ml-2 text-xl font-bold tracking-wide text-gray-100 uppercase">ADPlus.com</span>
@@ -38,7 +32,7 @@
         <div>
             <h1>Gestiona tu dinero de manera eficiente</h1>
             <p>
-                A continuación ingresa tus ingresos y gastos:
+                A continuación anota tus ingresos y gastos:
             </p>
         </div>
         <br>
@@ -50,31 +44,18 @@
                 </label>
                 <div class="relative mt-2 max-w-xs text-gray-900">
                     <div class="absolute inset-y-0 left-3 flex items-center">
-                        <select class="text-sm bg-transparent outline-none rounded-lg h-full">
-                            <option>PESO</option>
-                            <option>EUR</option>
-                            <option>USD</option>
-                        </select>
+
                     </div>
-                    <input type="number" id="Ropa" placeholder="$0.00"
-                        class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-900 shadow-sm rounded-lg" />
+                    <input type="number" id="Ingresos" class="w-full appearance-none outline-none border shadow-sm rounded-lg" />
                 </div>
             </div>
             </div> <br>
-            <div class="gastos">
+            <div class="Gastos">
                 <div> <label class="text-gray-900">
                         Gastos:
                     </label>
-                    <div class="relative mt-2 max-w-xs text-gray-500">
-                        <div class="absolute inset-y-0 left-3 flex items-center">
-                            <select class="text-sm bg-transparent outline-none rounded-lg h-full">
-                                <option>PESO</option>
-                                <option>EUR</option>
-                                <option>USD</option>
-                            </select>
-                        </div>
-                        <input type="number" id="Ropa" placeholder="$0.00"
-                            class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg" />
+                    <div class="relative mt-2 max-w-xs text-gray-900">
+                        <input type="number" id="Gastos" class="w-full appearance-none  outline-none border  shadow-sm rounded-lg" />
                     </div>
                 </div>
             </div>
@@ -86,14 +67,9 @@
                 </label>
                 <div class="relative mt-2 max-w-xs text-gray-900">
                     <div class="absolute inset-y-0 left-3 flex items-center">
-                        <select class="text-sm bg-transparent outline-none rounded-lg h-full">
-                            <option>PESO</option>
-                            <option>EUR</option>
-                            <option>USD</option>
-                        </select>
+
                     </div>
-                    <input type="number" id="Ropa" placeholder="$0.00"
-                        class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg" />
+                    <input type="number" id="Saldo" class="w-full appearance-none  outline-none border  shadow-sm rounded-lg" />
                 </div>
             </div>
         </form>
@@ -105,15 +81,7 @@
                     Ropa:
                 </label>
                 <div class="relative mt-2 max-w-xs text-gray-900">
-                    <div class="absolute inset-y-0 left-3 flex items-center">
-                        <select class="text-sm bg-transparent outline-none rounded-lg h-full">
-                            <option>PESO</option>
-                            <option>EUR</option>
-                            <option>USD</option>
-                        </select>
-                    </div>
-                    <input type="number" id="Ropa" placeholder="$0.00"
-                        class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg" />
+                    <input type="number" id="Ropa" class="w-full appearance-none  outline-none border  shadow-sm rounded-lg" />
                 </div>
             </div>
             <br>
@@ -122,15 +90,8 @@
                     Transporte:
                 </label>
                 <div class="relative mt-2 max-w-xs text-gray-900">
-                    <div class="absolute inset-y-0 left-3 flex items-center">
-                        <select class="text-sm bg-transparent outline-none rounded-lg h-full">
-                            <option>PESO</option>
-                            <option>EUR</option>
-                            <option>USD</option>
-                        </select>
-                    </div>
-                    <input type="number" id="Transporte" placeholder="$0.00"
-                        class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg" />
+
+                    <input type="number" id="Transporte" class="w-full appearance-none  outline-none border  shadow-sm rounded-lg" />
                 </div>
             </div>
             <br>
@@ -139,32 +100,16 @@
                     Comida:
                 </label>
                 <div class="relative mt-2 max-w-xs text-gray-900">
-                    <div class="absolute inset-y-0 left-3 flex items-center">
-                        <select class="text-sm bg-transparent outline-none rounded-lg h-full">
-                            <option>PESO</option>
-                            <option>EUR</option>
-                            <option>USD</option>
-                        </select>
-                    </div>
-                    <input type="number" id="Comida" placeholder="$0.00"
-                        class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg" />
+                    <input type="number" id="Comida" class="w-full appearance-none  outline-none border  shadow-sm rounded-lg" />
                 </div>
             </div>
             <br>
             <div>
-                <label class="text-gray-600">
+                <label class="text-gray-900">
                     Alquiler:
                 </label>
                 <div class="relative mt-2 max-w-xs text-gray-900">
-                    <div class="absolute inset-y-0 left-3 flex items-center">
-                        <select class="text-sm bg-transparent outline-none rounded-lg h-full">
-                            <option>PESO</option>
-                            <option>EUR</option>
-                            <option>USD</option>
-                        </select>
-                    </div>
-                    <input type="number" id="Alquiler" placeholder="$0.00"
-                        class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg" />
+                    <input type="number" id="Alquiler" class="w-full appearance-none  outline-none border  shadow-sm rounded-lg" />
                 </div>
             </div>
         </form>
