--- a/principal.html
+++ b/principal.html
@@ -7,7 +7,7 @@
     <title>Página principal - ADPlus</title>
     <link rel="shortcut icon" href="/AdministraPlus/imagenes/icono.ico">
 
-    <link rel="stylesheet" href="style4.css">
+    <link rel="stylesheet" href="Css/style4.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
