--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - AdministraPlus.com</title>
     <link rel="stylesheet" href="Css/Styles2.css">
-    <!-- //Le aplica el Style2 -->
-    <!-- Asegúrate de que el nombre de archivo y la ubicación sean correctos -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/AdministraPlus/imagenes/icono.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         function abrirInicioSesion() {
             var url = "SingIn.html"; // La URL de la página de inicio de sesión
             var opciones = "width=600,height=400,top=100,left=100,resizable=yes,scrollbars=yes";
-            window.open(url, "_blank", opciones);
+            var nuevaVentana = window.open(url, "loginWindow", opciones);
+
+            var pollTimer = window.setInterval(function() {
+                if (nuevaVentana.closed !== false) { // Si la ventana está cerrada
+                    window.clearInterval(pollTimer);
+                    window.location.href = "principal.html"; // Redirigir a la página principal
+                }
+            }, 100);
         }
     </script>
 </head>
-
 <body>
     <header>
         <div class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8">
-            <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-600 rounded-full" viewBox="0 0 24 24">
-                    <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-                </svg>
+            <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-600 rounded-full">
+                <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+            </svg>
             <h1>ADplus</h1>
             <nav>
                 <ul>
                     <li><a href="#" onclick="abrirInicioSesion(); return false;">Inicia sesión</a></li>
-                    <!-- Llamamos a la función abrirInicioSesion() al hacer clic en el enlace -->
                     <li><a href="contact.html">Contactanos</a></li>
                     <li><a href="Quienes-somos.html">Quienes somos</a></li>
                 </ul>
@@ -50,5 +52,4 @@
         © 2024 AdministraPlus.com. Todos los derechos reservados.
     </footer>
 </body>
-
 </html>
